# pipeline

./: CMakeLists.txt  Makefile  README.md  run_tests.sh
examples/: CMakeLists.txt
examples/text_file_processor/: CMakeLists.txt  Makefile  file_processing_example.cpp  input.txt
include/pipeline/: pipeline.h  pipeline_node.h  pipeline_nodes.h  pipeline_packet.h  pipeline_pad.h  pipeline_pads.h  pipeline_sharedmem_node.h
src/: pipeline.cpp  pipeline_node.cpp  pipeline_nodes.cpp  pipeline_pad.cpp  pipeline_pads.cpp  pipeline_shared_queue.h  pipeline_sharedmem_node.cpp
unittests/: CMakeLists.txt  test_basic.cpp  test_template_nodes.cpp
